src/objects/Demographic_Information__c.object
<CustomObject>
    <description>Demographic Information held against the People (Contact) record.</description>
    <fields>
        <fullName>Date_of_Change_of_Living_Arrangements__c</fullName>
        <label>Date of Change of Living Arrangements</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employment_Status__c</fullName>
        <inlineHelpText>The Employment Status of the person. They do not have to answer. ‘None’ means not asked; ‘Not Disclosed’ means was asked but didn’t answer.</inlineHelpText>
        <label>Employment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Employed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unemployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Disclosed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ethnic_Group__c</fullName>
        <inlineHelpText>The Ethnic group the person identifies with. They do not have to answer. ‘None’ means not asked; ‘Not Disclosed’ means was asked but didn’t answer.</inlineHelpText>
        <label>Ethnic Group</label>
        <picklist>
            <picklistValues>
                <fullName>White English / Welsh / Scottish / Northern Irish / British</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White Irish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White Gypsy or Irish Traveller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White: Other White background</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed: White and Black Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed: White and Black African</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed: White and Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian: Indian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian: Pakistani</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian: Bangladeshi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian: Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian: Other Asian background</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black: African</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black: Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black: Other Black / African / Caribbean background</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other: Arab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other ethnic group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not disclosed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Any other ethnic group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prefer not to answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown / not completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ethnicitiy__c</fullName>
        <description>Ethnic background of the client</description>
        <inlineHelpText>Ethnic background of the client. The client does not have to answer</inlineHelpText>
        <label>Ethnicitiy</label>
        <picklist>
            <controllingField>Ethnic_Group__c</controllingField>
            <picklistValues>
                <fullName>Not disclosed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>African</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albanian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All republics which made up the former USSR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Any other group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian and Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baltic States (Estonian, Latvian or Lithuanian)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladeshi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black and Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black and Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black and White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black British</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caribbean Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese and White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commonwealth of (Russian) Independent States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croatian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cypriot (part not stated)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East African Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Filipino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greek Cypriot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gypsy/Romany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iranian</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Faith_Culture__c</fullName>
        <inlineHelpText>The Faith and Culture group the person identifies with. They do not have to answer. ‘None’ means not asked; ‘Not Disclosed’ means was asked but didn’t answer.</inlineHelpText>
        <label>Faith/Culture</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agnostic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atheist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baptist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buddhist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catholic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Church of England / Wales / Scotland / Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Islam / Muslim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hindu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jehovah&apos;s Witness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jewish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Methodist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orthodox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parsi / Zorastrian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pentecostal / Church of God / Church of Christ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rastafarian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roman Catholic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seventh Day Adventist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sikh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Reformed / Presbyterian / Congregational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Christian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (specify)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not disclosed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Information_Completed__c</fullName>
        <description>Cannot count faith or veteran or NI Trust as these are not gathered for all regions.</description>
        <formula>CASE(( 
If(Isblank(NHS_Number__c),0,1) 
+If(Isblank(text(Ethnic_Group__c )),0,1) 
+If(Isblank(text(Ethnicitiy__c)),0,1) 
+If(Isblank(text(Living_arrangements__c)),0,1) 
+If(Isblank(text(Sexual_Status__c)),0,1) 
+If(Isblank(text(People_in_household__c)),0,1) 
+If(Isblank(text(Partnership_status__c)),0,1) 
+If(Isblank(text(Employment_Status__c)),0,1) 
),0,&quot;RED&quot;, 
1,&quot;RED&quot;, 
2,&quot;RED&quot;, 
3,&quot;RED&quot;, 
4,&quot;AMBER&quot;, 
5,&quot;AMBER&quot;, 
6,&quot;AMBER&quot;, 
7,&quot;AMBER&quot;, 
8,&quot;GREEN&quot;,&quot;RED&quot;)</formula>
        <label>Information Completed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Living_arrangements__c</fullName>
        <inlineHelpText>The Living Arrangements of the person. They do not have to answer. ‘None’ means not asked; ‘Not Disclosed’ means was asked but didn’t answer.</inlineHelpText>
        <label>Living Arrangements</label>
        <picklist>
            <picklistValues>
                <fullName>Own home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other family or friend&apos;s home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Care or nursing home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sheltered accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private rented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Council</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not disclosed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NHS_Number__c</fullName>
        <inlineHelpText>The NHS Number is the national unique identifier that makes it possible to share patient information across the whole of the NHS safely, efficiently and accurately. The NHS Number is 10 numeric digits in length.</inlineHelpText>
        <label>NHS Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NI_Trust_Area__c</fullName>
        <description>Northern Irelend Health and Social Care Trust</description>
        <inlineHelpText>Enter the person&apos;s Health and Social Care Trust</inlineHelpText>
        <label>NI Trust Area</label>
        <picklist>
            <picklistValues>
                <fullName>BHSCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NHSCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEHSCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SHSCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WHSCT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_dependent_children__c</fullName>
        <label>Number of dependent children</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Demographic_Details__c</fullName>
        <inlineHelpText>This MUST be completed if ‘OTHER’ has been selected in any of the demographic fields.</inlineHelpText>
        <label>Other Demographic Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partnership_status__c</fullName>
        <inlineHelpText>The Partnership Status the person identifies with. They do not have to answer. ‘None’ means not asked; ‘Not Disclosed’ means was asked but didn’t answer.</inlineHelpText>
        <label>Partnership status</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civil Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cohabiting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Separated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Widowed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divorced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not disclosed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single (inc. separated, widowed etc)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnered (inc. married, civil partnership etc)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prefer not to answer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>People_in_household__c</fullName>
        <label>People in household</label>
        <picklist>
            <picklistValues>
                <fullName>Service User only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service User and others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not disclosed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client and others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Demographic Information</relationshipLabel>
        <relationshipName>Demographic_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Registered_with_Social_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Refers to whether person is registered with Social Services emergency contact database (if your area has such a database in operation.</inlineHelpText>
        <label>Registered with Social Services?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sexual_Status__c</fullName>
        <inlineHelpText>The Sexual Orientation the person identifies with. They do not have to answer. ‘None’ means not asked; ‘Not Disclosed’ means was asked but didn’t answer.</inlineHelpText>
        <label>Sexual Orientation</label>
        <picklist>
            <picklistValues>
                <fullName>Heterosexual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lesbian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bisexual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Disclosed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Veteran__c</fullName>
        <inlineHelpText>If shown, this refers to whether person has been in military service (as benevolent funds may be available to access).</inlineHelpText>
        <label>Veteran?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes - Army</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Navy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - RAF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Disclosed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Demographic Information</label>
    <nameField>
        <label>Person Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demographic Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>DemographicInfoStop_Person_being_changed</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( $User.IgnoreValidationRules__c ) &amp;&amp; 
NOT(ISNEW() ) &amp;&amp;
(ISCHANGED(Person__c)  || ISCHANGED( Name ))</errorConditionFormula>
        <errorMessage>Cannot change person associated with the demographic information.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NHS_Number_Check</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
 OR(
  LEN ( NHS_Number__c ) = 0,
  REGEX(NHS_Number__c , &quot;^-?\\d{10}$&quot;)
 )
)</errorConditionFormula>
        <errorDisplayField>NHS_Number__c</errorDisplayField>
        <errorMessage>Please make sure that the NHS Number is 10 numeric digits in length.</errorMessage>
    </validationRules>
</CustomObject>